--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,13 +1,13 @@
 {
   "name": "Badhri's Blog",
   "short_name": "Badhri's Blog",
-  "description": "",
+  "description": "Get notifications about new posts (in development).",
   "version": "1.0.0",
   "start_url": ".",
   "id": "/",
   "scope": ".",
-  "background_color": "#000000",
-  "theme_color": "#000000",
+  "background_color": "#ff4f00",
+  "theme_color": "#ff4f00",
   "orientation": "portrait",
   "lang": "en-US",
   "display": "standalone",
